--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -74,3 +74,26 @@ h5{
         margin-bottom: 10px;
       }
 }
+footer {
+    top: 0;
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: flex-end; */
+    /* position:fixed; */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align:center;
+    color:#ffffff;
+    padding:0px 0px -38px 0px;
+    box-sizing:border-box;
+    margin-top: 30px;
+    background-color: black;
+    font-size: 15px;
+    text-align: center;
+    padding-top: 10px;
+    }
+
+ 
