--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -17,7 +17,8 @@ h1{
 }
 body{
     font-family: 'Permanent Marker', cursive;
-    background-image: url("../images/background.jpg");
+    background-image: linear-gradient(to right,#1DB954, blue);
+
     font-size: 40px;
     color: white;
 }
@@ -28,6 +29,7 @@ display: flex;
 }
 a{
     color:white; 
+    font-size: 20px;
 }
 h5{
     color:white;
