--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -31,6 +31,20 @@ display: flex;
     margin-left: 20px;
     margin-right: 20px;
 }
+button:hover { 
+    text-decoration: none; 
+    color: white;
+    background: black;
+}
+input[type=submit]:hover{
+    color: white;
+    background: black;
+}
+input[type=text]{
+    float: center;
+    display: flex;
+    width:100%;
+} 
 a{
     color:white; 
     font-size: 20px;
@@ -38,29 +52,9 @@ a{
 h5{
     color:white;
 }
-input #s1Name #s2Name{
-    display:flex;
-    /* text-align: center; */
-    justify-content: center;
-}
 .card-body .text-center{
     display: flex;
 }
-/* #spotify{
-    margin-top: 50px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      float: left;
-      padding: 0 10px;
-    }
-.song{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-} */
-
 .card-header{
     background-color:black;
 }
@@ -70,34 +64,16 @@ input #s1Name #s2Name{
     float: center;
     display: flex;
     margin-top: 20px;
-    padding: 20px;
+    /* padding: 20px; */
     /* width: 400px; */
 }
 
-/* #vote-button{
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-} */
-/* @media (max-width: 800px){
-#spotify {
-        flex-direction: column;
-      }
-      .song {
-        max-width: 300px;
-        width: 100%;
-        margin: 0 auto;
-        margin-bottom: 10px;
-      }
-} */
 footer {
     top: 0;
     padding: 0px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: flex-end; */
-    /* position:fixed; */
     left: 0;
     bottom: 0;
     width: 100%;
@@ -106,7 +82,6 @@ footer {
     padding:0px 0px -38px 0px;
     box-sizing:border-box;
     margin-top: 30px;
-    /* background-color: black; */
     font-size: 15px;
     text-align: center;
     padding: 20px;
