--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -18,7 +18,6 @@ h1{
 body{
     font-family: 'Permanent Marker', cursive;
     background-image: linear-gradient(to right,#1DB954, blue);
-
     font-size: 40px;
     color: white;
 }
@@ -64,7 +63,7 @@ h5{
     float: center;
     display: flex;
     margin-top: 20px;
-    /* padding: 20px; */
+    padding: 20px;
     /* width: 400px; */
 }
 
