--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@
 }
 
 h1{
-    color: white;
+    /* color: white; */
     text-align: center;
+    background: -webkit-linear-gradient(#1DB954, #c4302b);
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 2px white;
 }
 html{
     min-height: 100%;
@@ -39,7 +43,6 @@ a{
 a:hover { 
     text-decoration: none; 
     color: white;
-    /* background: black; */
 }
 h1{
     font-size: 100px;
@@ -50,10 +53,22 @@ h1{
 h1 .battle-text{
     margin-bottom: 100px;
 }
+h2{
+    font-size: 80px;
+    /* background-image: linear-gradient(to right,#1DB954, #c4302b); */
+    background: -webkit-linear-gradient(#1DB954, #c4302b);
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 2px;
+}
 button a{
     font-size: 50px;
     text-decoration: none;
     /* background: black; */
+}
+button:hover{
+    color:black;
+    background: white;
 }
 #battle-button{
     text-align: center;
@@ -71,9 +86,9 @@ footer {
     bottom: 0;
     text-align:center;
     color:#ffffff;
-    /* padding:0px 0px -38px 0px; */
+    padding:0px 0px -38px 0px;
     box-sizing:border-box;
-    /* margin-top: 100px; */
+    margin-top: 100px;
     font-size: 15px;
     text-align: center;
     
