--- a/style.css
+++ b/style.css
@@ -3,13 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+#logo {
+    display: inline-block;
+    margin-top: 10px; 
+    margin-right: 10px;
+    height: 30px;
+    width: auto; 
+    border-radius: 10%; 
+  }
 
 .jumbotron{
     background-color: rgba(45, 45, 45, 0.5);
 }
 
 h1{
-    /* color: white; */
     text-align: center;
     background: -webkit-linear-gradient(#1DB954, #c4302b);
     -webkit-background-clip: text;
@@ -27,7 +34,7 @@ html,body{
 body{
     font-family: 'Permanent Marker', cursive;
     background-image: url("../Project1/images/background.jpg");
-    font-size: 20px;
+    font-size: 30px;
     color: white;
     height: 100%;
 }
