--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -20,7 +20,6 @@ h1{
     background: -webkit-linear-gradient(#1DB954, black);
     -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  /* color: #1DB954; */
   text-shadow: 5px 5px white;
   font-size: 100px;
 }
@@ -47,6 +46,14 @@ button:hover {
 input[type=submit]:hover{
     color: white;
     background: black;
+    border: 3px solid white;
+    padding:3px;
+}
+input[type=submit]{
+    color: black;
+    background: white;
+    border: 3px solid black;
+    padding:3px;
 }
 input[type=text]{
     float: center;
