--- a/youtube/assets/css/style.css
+++ b/youtube/assets/css/style.css
@@ -3,49 +3,80 @@
     padding: 0;
     box-sizing: border-box;
 }
+#logo {
+    display: inline-block;
+    margin-top: 10px; 
+    margin-right: 10px;
+    height: 30px;
+    width: auto; 
+    border-radius: 10%; 
+  }
 .jumbotron{
     background-color: rgba(45, 45, 45, 0.5);
 }
-#timer{
-    color:rgb(102, 3, 3);
-    text-align: center;
-}
+
 h1{
     text-align: center;
+    background: -webkit-linear-gradient(#1DB954, black);
+    -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 5px 5px white;
+  font-size: 100px;
 }
 body{
     font-family: 'Permanent Marker', cursive;
-    /* background-image: linear-gradient(to right, green,blue,indigo); */
-    background-image: url("../images/TV.jpg");
+    background-image: linear-gradient(to right,#1DB954, blue);
     font-size: 40px;
     color: white;
-    /* background-color:rgb(87, 0, 128); */
-
 }
 .container{
 display: flex;
   justify-content: center;
   flex-direction: row;
 }
+.row{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+button:hover { 
+    text-decoration: none; 
+    color: black;
+    background: white;
+    border: 3px solid black;
+    padding:3px; 
+}
+button{
+    color: white;
+    background: black;
+    border: 3px solid white;
+    padding:3px;
+}
+input[type=submit]:hover{
+    color: black;
+    background: white;
+    border: 3px solid black;
+    padding:3px; 
+}
+input[type=submit]{
+    color: white;
+    background: black;
+    border: 3px solid white;
+    padding:3px;
+}
+input[type=text]{
+    float: center;
+    display: flex;
+    width:100%;
+} 
 a{
     color:white; 
+    font-size: 30px;
 }
 h5{
     color:white;
 }
-#spotify{
-    margin-top: 50px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      float: left;
-      padding: 0 10px;
-    }
-.song{
+.card-body .text-center{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
 }
 .card-header{
     background-color:black;
@@ -56,21 +87,40 @@ h5{
     float: center;
     display: flex;
     margin-top: 20px;
+    padding: 20px;
+    /* width: 400px; */
 }
-#vote-button{
-    /* display: ; */
+
+footer {
+    top: 0;
+    padding: 0px;
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    align-items: center;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align:center;
+    color:#ffffff;
+    padding:0px 0px -38px 0px;
+    box-sizing:border-box;
+    margin-top: 30px;
+    font-size: 15px;
     text-align: center;
-}
-@media (max-width: 800px){
-#spotify {
-        flex-direction: column;
-      }
-      .song {
-        max-width: 300px;
-        width: 100%;
-        margin: 0 auto;
-        margin-bottom: 10px;
-      }
-}
+    padding: 20px;
+    }
+
+ #s1Name,
+ #s2Name {
+     margin-top: 1%;
+     margin-bottom: 1%;
+ }
+
+ #winnerFormat {
+    width: 40%;
+    margin-left: 30%
+ }
+
+ #latestWinner {
+     margin-left: 50%;
+ }
