--- a/spotify/assets/css/style.css
+++ b/spotify/assets/css/style.css
@@ -17,7 +17,7 @@
 
 h1{
     text-align: center;
-    background: -webkit-linear-gradient(#1DB954, black);
+    background: -webkit-linear-gradient(#1DB954, blue);
     -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 5px 5px white;
@@ -112,8 +112,19 @@ footer {
 
  #s1Name,
  #s2Name {
-     margin-top: 1%;
-     margin-bottom: 1%;
+     border-radius:  18px;
+     background: blue;
+     padding: 20px;
+     width: 500px;
+     height: 15px;
+     margin-top: 5%;
+     margin-bottom: 5%;
+ }
+ #s1Submit, #s2Submit {
+     border-radius: 18px;
+ }
+ #s1VoteSubmit, #s2VoteSubmit{
+     border-radius: 18px;
  }
 
  #winnerFormat {
